[package]
name = "envoke"
version = "0.1.0"
description = "A simple and ergonomic way to load environment variables into struct fields."
categories = ["Configuration"]
keywords = [
    "envoke",
    "envvar",
    "parse",
    "utility"
]
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
envoke_derive = { path = "../envoke_derive" }
strum = { version = "0.27.1", features = ["derive"] }
thiserror = "2.0.11"

[dev-dependencies]
temp-env = "0.3.6"
