[package]
name = "envoke_derive"
version = "0.1.4"
description = "A proc macro for loading environment variables into struct fields automatically."
categories = ["development-tools::procedural-macro-helpers"]
keywords = [
    "envoke",
    "derive",
    "proc_macro",
    "envvar",
]
repository.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
convert_case = "0.7.1"
quote = "1.0.38"
strum = { version = "0.27.0", features = ["derive"] }
syn = { version = "2.0.98", features = ["full", "extra-traits"] }
proc-macro2 = "1.0.93"

[lib]
proc-macro = true